# blickrichtung

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  COMPLETE_THOUGHT_SKELETON_INTEGRATION.md  CONTRIBUTING.md  INSTALL.md  INTEGRATION_ROADMAP.md  LICENSE  PUBLICATION_CHECKLIST.md  README.md  RUN_COMPLETE_INTEGRATION.md
chigure/: .gitignore  ACCOMPLISHMENTS.md  COMPLETION_REPORT.md  CORE_MODULES.md  HANDLING_CRITIQUES.md  INSTALL.md  LICENSE  MANIFEST.in  MODULE_COMPLETION_STATUS.md  PAPER_1_OUTLINE.md  PREPRINT_READINESS_PLAN.md  PUBLICATION_STRATEGY.md  QUICKSTART.md  README.md  RESULTS_SAVING.md  RUN.md  VISUALIZATION_GUIDE.md  diagrams.md  implementation.md  measure_oscillatory_holes.py  pyproject.toml  requirements-dev.txt  requirements-hardware.txt  requirements.txt  run_core_demonstrations.py  run_experiment.py  setup.py  test_installation.py  test_save_functionality.py  view_results.py  visualize_data.py
chigure/src/: __init__.py
chigure/src/acoustic_wind_tunnel/: __init__.py  acoustic_streaming.py  calibration.py  grandwave_integration.py  hardware.py  s_entropy_acoustic.py  velocimetry.py
chigure/src/cathedral/: BUGFIXES_APPLIED.md  COMPLETE_ALL_VALIDATIONS.py  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  README_IMPLEMENTATIONS.md  RUN_ALL_CATHEDRAL_VALIDATIONS.py  bmd_equivalence.py  charge_dynamics.py  circuit_integration.py  circuit_pathway.py  drug_membrane.py  membrane_composition.py  membrane_computing.py  membrane_performance.py  oxygen_distinguishability.py  s_entropy_validation.py  topological_enhancements.py
chigure/src/computing/: IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RUN_EXTENDED_VALIDATIONS.bat  __init__.py  bmd_phace_sorting.py  categorical_state_space_reduction.py  console.md  drug_properties.py  drug_properties_20251106_211724.json  electromagnetic_resonance_calculator.py  hierarchical_bmd_composition.py  kuramoto_oscillator_network.py  metabolic_flux_hierarchy.py  metabolic_flux_protocol.py  metabolic_flux_visualisation.py  metabolic_hierarchy_mapper.py  requirements.txt  run_all_validations.py  run_extended_validations.py  therapeutic_window_calculator.py  therapeutic_window_results_20251106_211754.json  visualise_drug_properties.py  visualise_therapeutic_windows.py
chigure/src/core/: __init__.py  biological_maxwell_demon.py  oscillatory_signature.py  oxygen_categorical_clock.py  saint_entropy.py
chigure/src/experimental/: README.md  README_CIRCUIT_COMPLETION.md  __init__.py  complete_system.py  hardware_setup.py  oscillatory_hole_detector.py  thought_geometry.py
chigure/src/geometry/: FIXED_EXPERIMENTS_README.md  HOW_TO_RUN_VALIDATORS.md  MOLECULAR_GAS_METHOD_EXPLAINED.md  NEGATIVE_RESULT_VALIDATION.md  QUICK_START.md  README_EXPERIMENTAL_FRAMEWORK.md  RUN_ALL_EXPERIMENTS_SAFE.bat  RUN_BMD_FRAME_EXP1.bat  RUN_EXPERIMENTS.bat  RUN_MULTISCALE_EXP1.bat  RUN_QUANTUM_ION_EXP1.bat  __init__.py  bmd_frame_selection_validator.py  chart_panels.py  coherence_fields.py  emergence.py  hdyrogen_topology.py  hydrogen_oscillatory_hole.py  multiscale_oscillatory_consciousness_validator.py  quantum_failure.py  quantum_ion_consciousness_validator.py  run_comprehensive_experiments.py  run_experiments.sh  run_single_experiment.py  test_imports.py  tunneling.py  visualise_ion_tunneling.py
chigure/src/hardware/: hardware_mapping.py  sensor_fusion.py
chigure/src/oscillator/: coupled_linear_oscillator.py  damped_harmonic_oscillator.py  driven_harmonic_oscillator.py  simple_harmonic_oscillator.py
chigure/src/signatures/: __init__.py  hardware.md  hardware_signature.py  molecular_signature.py
chigure/src/spectrometer/: __init__.py  absorption_analysis.py  calibration.py  grandwave_integration.py  grating_calibration.py  hardware.py  s_entropy_optical.py  spectral_extraction.py
chigure/src/standing/: COMPLETE_PACKAGE_LIST.txt  INSTALLATION.md  PACKAGES_COMPLETE.md  PACKAGES_REQUIRED.md  RUN_THOUGHT_VALIDATION.md  requirements_thought_validation.txt
chigure/src/temporal/: README.md  __init__.py  console.md  temporal_clock.py  temporal_validator.py
chigure/src/thought/: README_COMPREHENSIVE_VALIDATION.md  README_THOUGHT_METABOLISM.md  cardiac_phase.py  combined_watch.py  consiousness_geometry.py  coros_consiousness.py  emperical_validation.py  energy_subtraction.py  energy_subtraction_results.json  entropy_transformation.py  framework_integration.py  garmin_consiousness.py  gps_consiousness_geometry.py  gps_precision_cascade.py  gps_thought_geometry.py  heart_beart_gas_molecule.py  heart_rate_coupling.py  isolate_metabolisms.py  joint_angle_frequency.py  joint_angle_kinematics.py  metabolic_mirror.py  metabolic_mirror_results.json  metabolic_signature.py  metabolism.py  multiscale_atlas.py  muscle_dynamics.py  neural_resonance.py  perception_rate.py  (+9 more)
chigure/tests/: __init__.py  test_experimental.py
megaphrenia/: CIRCUITS_CATALOG.md  ENCODING_FIX.md  IMPORT_FIXES_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  MANIFEST.in  PACKAGE_SETUP_COMPLETE.md  PAPER_WRITING_GUIDE.md  PUBLICATION_READINESS.md  QUICKSTART.ps1  QUICKSTART.sh  README.md  READY_FOR_PUBLICATION.md  READY_TO_TEST.md  RERUN_TESTS_NOW.md  RESULTS_ANALYSIS.md  RUN_TESTS.md  RUN_TESTS_QUICK_REFERENCE.md  TEST_FIXES_APPLIED.md  THE_COMPLETE_INTEGRATION.md  YOUR_RESULTS_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_complete_framework.py  test_fixed_integration.py  test_results.md  validate_half_adder.py
megaphrenia/docs/: FINAL_COMPLETION_SUMMARY.md  HARMONIC_BALANCE_TESTING.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  REDESIGN_SUMMARY.md  VALIDATION_STRATEGY.md  biological-integrated-circuits.tex  implementation.md
megaphrenia/integration/: __init__.py  thought_skeleton_validator.py
megaphrenia/results/: comparative_performance.py  detailed_test_metrics.py  framework_analysis.py  framework_performance.py  framework_test_report_20251029_090044.txt  framework_test_report_20251029_091957.txt  framework_test_summary_20251029_090044.csv  framework_test_summary_20251029_091957.csv  run_analysis.py
(+118 files in other folders)
