[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chigure"
version = "1.0.0"
description = "Consciousness Validation Engine: Physical implementation of consciousness detection via oscillatory hole-electron completion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kundai", email = "your.email@example.com"}
]
keywords = [
    "consciousness",
    "oscillatory-holes",
    "categorical-completion",
    "oxygen-clock",
    "BMD",
    "thought-geometry",
    "neuroscience",
    "pharmacology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
hardware = [
    "pyserial>=3.5",
    "pyvisa>=1.12.0",
    "pyvisa-py>=0.5.3",
]
visualization = [
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
]
all = [
    "chigure[dev,hardware,visualization]",
]

[project.urls]
Homepage = "https://github.com/yourusername/blickrichtung"
Documentation = "https://github.com/yourusername/blickrichtung/tree/main/chigure"
Repository = "https://github.com/yourusername/blickrichtung"
"Bug Tracker" = "https://github.com/yourusername/blickrichtung/issues"

[project.scripts]
chigure-validate = "scripts.run_validation:main"
chigure-experiment = "experimental.complete_system:run_complete_experiment"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

