[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blickrichtung-computing"
version = "2.0.0"
description = "Computational validation suite for consciousness programming framework"
readme = "src/computing/README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
    "consciousness programming",
    "biological computing",
    "metabolic hierarchies",
    "pharmacodynamics",
    "oscillatory networks",
    "Kuramoto oscillators",
    "thermodynamic computation"
]
authors = [
    {name = "Kundai Sachikonye", email = "your.email@example.com"}
]
maintainers = [
    {name = "Kundai Sachikonye", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "networkx>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
notebooks = [
    "jupyter>=1.0",
    "ipython>=7.0",
    "pandas>=1.2.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/blickrichtung"
Documentation = "https://github.com/yourusername/blickrichtung/tree/main/docs"
Repository = "https://github.com/yourusername/blickrichtung"
"Bug Tracker" = "https://github.com/yourusername/blickrichtung/issues"

[project.scripts]
blickrichtung-validate = "computing.run_extended_validations:main"
blickrichtung-flux = "computing.metabolic_flux_hierarchy:main"
blickrichtung-mapper = "computing.metabolic_hierarchy_mapper:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
source = ["src/computing"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
